bootstrap + hopefully all of the files we will need

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,4 +1,12 @@
 
+<div class="container">
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../styles/css/bootstrap/dist/css/bootstrap.min.css">
 <h2>Login Page</h2>
 
 <fieldset>
@@ -34,5 +42,5 @@
     <button  class="btn btn-default" ng-cloak ng-show="createMode" ng-click="createMode = false">Cancel</button>
   </p>
 </form>
-<p ng-show="err" class="bg-danger">{{err}}</p>
 
+</div>
