--- a/app/views/viewData.html
+++ b/app/views/viewData.html
@@ -7,8 +7,11 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
 </head>
 <body>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
@@ -96,6 +99,41 @@
 
   </div>
 </div>
+ <div id="myDiv" style="width: 480px; height: 300px;"><!-- Plotly chart will be drawn inside this DIV --></div>
+  <script>
+        <var trace1 = {
+      x: [1, 2, 3, 4, 5],
+      y: [1, 6, 3, 6, 1],
+      mode: 'markers',
+      type: 'scatter',
+      name: 'Team A',
+      text: ['A-1', 'A-2', 'A-3', 'A-4', 'A-5'],
+      marker: { size: 12 }
+    };
 
+    var trace2 = {
+      x: [1.5, 2.5, 3.5, 4.5, 5.5],
+      y: [4, 1, 7, 1, 4],
+      mode: 'markers',
+      type: 'scatter',
+      name: 'Team B',
+      text: ['B-a', 'B-b', 'B-c', 'B-d', 'B-e'],
+      marker: { size: 12 }
+    };
+
+    var data = [ trace1, trace2 ];
+
+    var layout = { 
+      xaxis: {
+        range: [ 0.75, 5.25 ] 
+      },
+      yaxis: {
+        range: [0, 8]
+      },
+      title:'Data Labels Hover'
+    };
+
+    Plotly.newPlot('myDiv', data, layout);
+      </script>
 </body>
 </html>
