--- a/app/views/addData.html
+++ b/app/views/addData.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Add Data</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -29,19 +29,21 @@
 
 <div class="jumbotron" align="center">
 <h1>Add Your Fitness Data Here</h1></div>
+<br/>
 
-<p></p>
-<p></p>
+<div align="center">
+<img src="https://static01.nyt.com/images/2014/11/12/health/12phsyed-well/12phsyed-well-tmagArticle.jpg" class="img-circle" alt="Circular Image" ></div>
+<br /><br />
 
 
   <div class="panel-group">
    
     <div class="panel panel-danger">
-      <div class="panel-heading">Gym Time</div>
+      <div class="panel-heading"><h4>Gym Time (in minutes)</h4></div>
          <div class="row">
                 <div class="col-xs-12">
                 <div class="input-group">
-				<input type="text" class="form-control" placeholder="Input Gym Time&hellip;">
+				<input type="text" class="form-control" placeholder="Input Gym Time">
 				<span class="input-group-btn">
 				<button type="button" class="btn btn-default">Submit</button>
  				</span>
@@ -50,18 +52,17 @@
 
  </div>
 
-
-<br /></div>
+</div>
     </div>
 
     <div class="panel-group">
    
     <div class="panel panel-warning">
-      <div class="panel-heading">Water Content</div>
+      <div class="panel-heading"><h4>Water Content (1 glass = 8 oz)</h4></div>
          <div class="row">
                 <div class="col-xs-12">
                 <div class="input-group">
-				<input type="text" class="form-control" placeholder="Input Water Intake&hellip;">
+				<input type="text" class="form-control" placeholder="Input Water Intake (# of glasses)">
 				<span class="input-group-btn">
 				<button type="button" class="btn btn-default">Submit</button>
  				</span>
@@ -71,17 +72,17 @@
  </div>
 
 
-<br /></div>
+</div>
     </div>
 
       <div class="panel-group">
    
     <div class="panel panel-success">
-      <div class="panel-heading">Steps</div>
+      <div class="panel-heading"><h4>Steps</h4></div>
          <div class="row">
                 <div class="col-xs-12">
                 <div class="input-group">
-				<input type="text" class="form-control" placeholder="Input Steps&hellip;">
+				<input type="text" class="form-control" placeholder="Input Steps">
 				<span class="input-group-btn">
 				<button type="button" class="btn btn-default">Submit</button>
  				</span>
@@ -89,6 +90,8 @@
 	</div>
 
  </div>
+
+
 
 
 <br /></div>
@@ -99,3 +102,4 @@
 
 </body>
 </html>
+
