--- a/app/views/login.html
+++ b/app/views/login.html
@@ -7,6 +7,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../styles/css/bootstrap/dist/css/bootstrap.min.css">
+  <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
 <h2>Login Page</h2>
 
 <fieldset>
@@ -20,7 +22,7 @@
   </p>
 </fieldset>
 
-<form role="form">
+<form role="form" novalidate>
   <p class="form-group">
     <label for="loginEmail">email</label>
     <input id="loginEmail" required name="email" type="email" ng-model="email" class="form-control" />
@@ -35,7 +37,7 @@
   </p>
 
   <p>
-    <button  class="btn btn-primary" ng-click="passwordLogin(email, pass)" ng-hide="createMode">Log In</button>
+  <input type="button" class="btn btn-primary" value="Log In" onclick="location.href='../index.html'" />
     <button  class="btn btn-default" ng-click="createMode = true" ng-hide="createMode">Register</button>
     <button  class="btn btn-primary" ng-cloak ng-show="createMode"
             ng-click="createAccount(email, pass, confirm)">Create Account</button>
